k8s/networking/argocd-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: bankapp-referencegrant
  namespace: bankapp
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: nginx-gateway
  to:
  - group: ""
    kind: Service
    name: bankapp-service
