k8s/networking/bankapp-httproute.yaml
# bankapp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bankapp-httproute
  namespace: nginx-gateway
spec:
  parentRefs:
  - name: cluster-gateway
    namespace: nginx-gateway
  hostnames:
  - "bankapp.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bankapp-service
      namespace: bankapp
      port: 80
